--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link type="text/css" rel="stylesheet" href="./css/main.css"/>
   <title>Instagram</title>
 </head>
-<body>
-  Instagram
+<body></body>
+
+<div class="container">
+  <div id="phones">
+  </div>
+  <div id="content">  
+    <div id="content-top"></div>
+    Instagram
+    </div>
 
   Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  Instagram is a fsdfsdvfast, beautiful and fun way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
@@ -16,7 +24,10 @@
 
   Download on the App Store
   Get it on Google Play
+  </div>
+</div>
 
+</div class="container" id="nav">
   About Us
   Support
   Blog
@@ -27,5 +38,8 @@
   Terms
 
   &copy; 2014 Instagram
+</div>
+
+
 </body>
 </html>
