--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -20,20 +20,19 @@
         <p>Oh yeah, did we mention it's free?</p> 
         <a href="#"><img class="ig-download" src="images/badge-iphone.png" alt="download from apple store"></a>
         <a href="#"><img class="ig-download" src="images/badge-android.png" alt="download from google play"></a>
-        
       </div>
     </div>
     <div class="clearfix"></div>
   </main>
   <footer class="footer">
-    <a href="#" class="footer-link">About Us</a>
-    <a href="#" class="footer-link">Support</a>
-    <a href="#" class="footer-link">Blog</a>
-    <a href="#" class="footer-link">Press</a>
-    <a href="#" class="footer-link">API</a>
-    <a href="#" class="footer-link">Jobs</a>
-    <a href="#" class="footer-link">Privacy</a>
-    <a href="#" class="footer-link">Terms</a> 
+    <a href="#">About Us</a>
+    <a href="#">Support</a>
+    <a href="#">Blog</a>
+    <a href="#">Press</a>
+    <a href="#">API</a>
+    <a href="#">Jobs</a>
+    <a href="#">Privacy</a>
+    <a href="#">Terms</a> 
     <span class="copyright">&copy; 2014 Instagram</span>
   </footer>
 </body>
