--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
-<body>
-  Instagram
+<body class="gradient">
+  <div class="wrapper">
+    <div class="picture-text-wrapper">
+    <img class="phone-picture" src="./images/phones.png" alt="Phone"><img>
+    <section id="logo-text">
+      <header class="header">
+          <img class="logo" src="./images/brand.png" alt="logo"><img>
+          <button class="button">
+            <img class="home-icon" src="./images/home.png" alt="home-icon"><img>
+            <p class="login">Log in</p>
+          </button>
+        </header>
+      <article class="text">
+        
+        <h1 class="title">Capture and Share the World's Moments</h1>
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p class="last-text-line">Oh yeah, did we mention it's free?</p>
+        <div>
+          <img class="iphone-badge" src="./images/badge-iphone.png" alt="iphone-badge"><img>
+          <img class="android-badge" src="./images/badge-android.png" alt="android-badge"><img>
+        </div>
+      </article>
+    </section>
+  </div>
+    <ul class="footer">
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+ 
 </body>
 </html>
+
+
