--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -38,8 +38,8 @@
         <li><a href="#">Jobs</a></li>
         <li><a href="#">Privacy</a></li>
         <li><a href="#">Terms</a></li>
+        <li>&copy; 2014 Instagram</li>
       </ul>
-      &copy; 2014 Instagram
     </footer>
   </div>
 </body>
