--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+ 
+  <div class="absolute-master-div">
+  <div class="phones"><img src="images/phones.png" alt="iphone image"></div>
 
-  Capture and Share the World's Moments
+  <div class="container-text">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div  class="container-login-logo">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="instagram-logo"><img src="images/brand.png" alt="instagram logo"></div>
 
-  Oh yeah, did we mention it's free?
+  <div class="login-button"><img src="images/home.png" alt="boton">Log in</div>
 
-  Download on the App Store
-  Get it on Google Play
+    <div class="clear"></div>
+  </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <div class="info-degradation">
+  <h2>Capture and Share the World's Moments</h2>
 
-  &copy; 2014 Instagram
+  <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+  <p>Oh yeah, did we mention it's free?</p>
+
+  <div class="app-download">
+    <div class="inline-block"><img src="images/badge-iphone.png" alt="App Store"></div>
+    <div class="inline-block"><img src="images/badge-android.png" alt="Google Play"></div>
+  </div>
+
+  </div>
+  
+  </div>
+
+  </div>
+
+  <div class="footer">  
+
+      About Us
+      Support
+      Blog
+      Press
+      API
+      Jobs
+      Privacy
+      Terms
+    
+      &copy; 2014 Instagram</div>
 </body>
 </html>
