--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -12,7 +12,7 @@
     <div id="container-mid-top">
       <img src="./images/brand.png">
       <div id="buttonHome">
-        <img src="./images/home.png"><span id="home">Log In</span></div>
+        <img src="./images/home.png" id="but"><span id="home">Log In</span></div>
     </div>
     <div id="container-mid-bot">
         <span id="title">Capture and Share the World's Moments</span>
