--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <!-- Code starts here. May the Bat be with you -->
+ <div class="logoAndLogin"> 
+</div>
 
-  Capture and Share the World's Moments
+<div class="container">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div class="phones">
+        <img src="./images/phones.png" alt="Phones">
+     </div> 
+  <div class="instaLogin">
+      <div class="logocontainer">
+        <img src="./images/brand.png" alt="Logo">
+      </div> 
+      <div class="logButton">
+        <button type="button" class="btn">Log In</button>
+      </div> 
+  </div>  
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="claim">
+    <h2>Capture and Share<br> the World's Moments</h2>
 
-  Oh yeah, did we mention it's free?
+    <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life<br> with friends and family.<br> <br>
 
-  Download on the App Store
-  Get it on Google Play
+    Take a picture or video, choose a filter to transform its look<br> and feel, then post to Instagram &mdash; it's that easy. You can<br> even share to Facebook, Twitter, Tumblr and more. It's a<br> new way to see the world. <br><br>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    Oh yeah, did we mention it's free?
+    </p>   
+  </div> 
+ </div> 
 
-  &copy; 2014 Instagram
+  <div class="callToAction">
+    Download on the App Store
+    Get it on Google Play
+
+  </div>
+    <div class="footer">
+    About Us
+    Support
+    Blog
+    Press
+    API
+    Jobs
+    Privacy
+    Terms 
+    </div>
+</div>
+
 </body>
 </html>
