--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
+  <meta charset="utf-8">
   <title>Instagram</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:200,300,400,600,700" rel="stylesheet">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div id="blue">
+    
+  </div>
+  <section id="container">
+    <div id="iphone">
+      <img src="images/phones.png" alt="">
+    </div>
+    <div id="content">
+      <div id="login">
+        <div id="div-img">
+          <img src="images/brand.png" alt="">
+        </div>
+        <a href="#">
+          <img src="images/home.png" alt="">
+          Log in
+        </a>
+      </div>
+      <div id="contain-a">
+        <img src="images/frame.png" alt="">
+        <div id="parr-a">
+          <h1> Capture and Share <span>the World's Moments</span></h1>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun </strong>way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p id="p-3">Oh yeah, did we mention it's free?</p>
+            <img src="images/badge-iphone.png" alt="">
+          <a href="#">
+            <img src="images/badge-android.png" alt="">
+            <a href="#">
 
-  Capture and Share the World's Moments
+            </a>
+            </a>
+          </div>
+        </div>
+      </div>
+      </section>
+    </body> 
+    </html>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
-</html>
+ 
+  
+  
