--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -22,7 +22,7 @@
       <h1>Capture and Share<br>
       the World's Moments</h1>
 
-      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.<br><br>
+      <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br><br>
 
       Take a picture or video, choose a filter to transform its look and feel, then post to
     Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
