--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Instagram</title>
   <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  <div id="wrapper">
-    <div id="cover-image">
+  <div class="wrapper">
+    <div class="cover-image">
       <img src="./images/phones.png" alt="Smartphones" />
     </div>
-    <div id="cover-info">
-      <div id="welcome">
+    <div class="cover-info">
+      <div class="welcome">
         <img id="logo" src="./images/brand.png" alt="Brand Logo" />
-        <div id="buton-ini">
+        <button class="buton-ini">
           <a href="#">
             <p><img src="./images/home.png" alt="Home Button" />Log In</p>
           </a>
-        </div>
+        </button>
       </div>
-      <div id="message">
+      <div class="message">
         <h2>Capture and Share<br> the World's Moments</h2>
         
         <p>
@@ -33,7 +35,7 @@
 
       </div>
     </div>
-    <footer id="site-footer">
+    <footer class="site-footer">
       <ul>
         <li><a href="#">About Us</a></li>
         <li><a href="#">Support</a></li>
