--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,53 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  	<div class="container">
 
-  Capture and Share the World's Moments
+      <div class="left-block">
+          <img src="images/phones.png">
+      </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div class="right-block">
+        <div class="instaBlock">
+          <img class="instaBrand" src="images/brand.png"/>
+          <button class="buttonHome"><img src="images/home.png"/><span class="logIn">Log in</span></button>
+        </div>
+        <div class="description">
+          <h2>Capture and Share</h2>
+          <h2>the World's Moments</h2 >
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        <div>
+          <button class="donwloadApp"><img src="images/badge-iphone.png"></button>
+          <button class="donwloadApp"><img src="images/badge-android.png"></button>
+        </div>    
+        
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      </div>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    </div>
+    
+    <div class="site-footer">
+      <nav >
+        <ul>
+          <li>About Us</a></li>
+          <li>Support</a></li>
+          <li>Blog</a></li>
+          <li>Press</a></li>
+          <li>API</a></li>
+          <li>Jobs</a></li>
+          <li>Privacy</a></li>
+          <li>Terms</a></li>
+          <li class=cterms>&copy; 2014 Instagram</li>
+        </ul>
+      </nav>
+    </div>
+  
 </body>
 </html>
