--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -20,7 +20,7 @@
 			</div>			
 			<div class="main">
 			
-				<h1>Capture and Share the World's Moments</h1>
+				<h1>Capture and Share <br/>the World's Moments</h1>
 
 				<p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.
 				  <br/><br/>
@@ -29,25 +29,28 @@
 				  Oh yeah, did we mention it's free?</p>
 				  
 				<div class="download">
-						<img src="images/badge-iphone.png"/>
-					
-						<img class="download-right" src="images/badge-android.png"/>
-					</div>
+						<a href="#"><img src="images/badge-iphone.png"/></a>
+						<a href="#"><img class="download-right" src="images/badge-android.png"/></a>
+				</div>
 
 			</div>
 		</div>
-		<div class="clear-fix"/>
-		<div>
-		 About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+		<div class="footer">
+			<div class="menu"/>
+				<ul>
+					<li><a href="#">About Us</a></li>
+					<li><a href="#">Support</a></li>
+			  		<li><a href="#">Blog</a></li>
+			  		<li><a href="#">Press</a></li>
+			  		<li><a href="#">API</a></li>
+			  		<li><a href="#">Jobs</a></li>
+			  		<li><a href="#">Privacy</a></li>
+			  		<li><a href="#">Terms</a></li>
+				</ul>
+			</div>
+			<div class="copy"/>
+			  &copy; 2014 Instagram
+			</div>
 		</div>
 	</div>
   
