--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,57 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="lazy-container-blue">
 
-  Capture and Share the World's Moments
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="outer-container">
+    <div class="container-image">
+      <img src="images/phones.png" alt="">
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="container-text">
+      <div class="text-header-container">
+        <img src="images/brand.png" alt="">
+        <button>Log in</button>
+      </div>
+      <div class="text-body-container">
+        <div class="text">
+          <h3>Capture and Share the World's Moments</h3>
+          <p>
+            Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>
+            Oh yeah, did we mention it's free?
+          </p>
+          <div class="downloads-container">
+            <img src="images/badge-iphone.png" alt="Download on the App Store">
+            <img src="images/badge-android.png" alt="Get it on Google Play">
+          </div>
+        </div>
+      </div>
+    </div>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  </div>
+  <div class="container-links">
+      <ul>
+        <li><a href="">About Us</a></li>
+        <li><a href="">Support</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">Press</a></li>
+        <li><a href="">API</a></li>
+        <li><a href="">Jobs</a></li>
+        <li><a href="">Privacy</a></li>
+        <li><a href="">Terms</a></li>
+        <li id="tm">&copy; 2014 Instagram</li>
+      </ul>
+    </div>
 </body>
 </html>
