--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,42 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="blue-background"></div>
+  <div class="main-container">
+    <img class="phones" src="images/phones.png" alt="phones">
 
-  Capture and Share the World's Moments
+    <div class="inner-container">
+      <img src="images/brand.png" alt="brand">
+      <button class="log-in">
+        <img src="images/home.png" alt="home">
+        <p>Log in</p>
+      </button>
+      <div class="text-container">
+        <h1>Capture and Share the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <img src="images/badge-iphone.png" alt="phone picture">
+        <img class="android" src="images/badge-android.png" alt="phone picture">
+      </div>
+    </div>
+    <footer>
+      <ul>
+          <li class="right first">About Us</li>
+          <li class="right">Support</li>
+          <li class="right">Blog</li>
+          <li class="right">Press</li>
+          <li class="right">API</li>
+          <li class="right">Jobs</li>
+          <li class="right">Privacy</li>
+          <li class="right">Terms</li>
+          <li class="right copyright">&copy; 2014 Instagram</li>
+        </ul>
+    </footer>
+  </div>
 </body>
 </html>
