--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="section1">
+    <div class="imgPhone">
+        <img src="images/phones.png" alt="iphones">
+    </div>
 
-  Oh yeah, did we mention it's free?
+    <div class="section1Part2">
+     <img src="images/brand.png" alt="">
 
-  Download on the App Store
-  Get it on Google Play
+     <button type="button"> <img class="casita" src="images/home.png" alt="home"> <span class="login"> Log in</span></button>
+      
+      <div class="souspart1Section1Part2">
+      <h1 class="h1Section2"> Capture and Share <br> the World's Moments 
+      </h1>
+       <p> Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life <br> with friends and family. <br> <br>
+         Take a picture or video, choose a filter to transform its look <br> and feel, then post to Instagram &mdash; it's that easy.
+         You can <br> even share to Facebook, Twitter, Tumblr and more. It's a <br> new way to see the world. <br> <br> Oh yeah, did we mention it's
+         free?
+       </p>
+       <img src="images/badge-iphone.png" alt="iphonedown">
+         <img src="images/badge-android.png" alt="androiddown">
+        </div>
+    </div>
+  </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <div class="section2">
+   
+  </div>
 
-  &copy; 2014 Instagram
+  <footer class="section3">
+
+  <ul class="ulFooter">
+    <li><a href="#"></a>About Us</li>
+    <li><a href="#"></a>Support</li>
+    <li><a href="#"></a>Blog</li>
+    <li><a href="#"></a>Press</li>
+    <li><a href="#"></a>API</li>
+    <li><a href="#"></a>Jobs</li>
+    <li><a href="#"></a>Privacy</li>
+    <li><a href="#"></a>Terms</li>
+    <li><a href="#"></a><span>&copy; 2014 Instagram</span></li>
+  </ul>
+   
+    
+  </footer>
+
+
 </body>
+
 </html>
