--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,22 +1,54 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  <section>
+<div class="bluebox"></div>
+<div class="whitebox"></div>
+</section>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<section1>
+    <div class="phones">
+    <img src="images/phones.png" alt="">
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="instagramlogo">  
+        <img src="images/brand.png" alt="">
+      </div>
+      <button class="login" type="button"><img src="images/home.png" alt="">Log In
+      </button>
 
-  Oh yeah, did we mention it's free?
+  <div class="content">
+    
+ <h2>Capture and Share <br>the World's Moments</h2> 
 
-  Download on the App Store
-  Get it on Google Play
+  <p> Instagram is a <b>fast</b>, <b>beautiful </b>and <b> fun</b> way to share your life <br>with friends and family.
 
+  Take a picture or video, choose a filter to <br>transform its look<br> and feel, then post to Instagram &mdash; it's that easy. You can<br> even share to Facebook, Twitter, Tumblr and more. It's a<br> new way to see the world.<br>
+
+  Oh yeah, did we mention it's free?</p>
+</div>
+<div class="iphone">
+<img src="images/badge-iphone.png" alt="">
+  
+<img src="images/badge-android.png" alt="">
+</div>
+</div>
+</div>
+</section1>
+
+<section2>
+<div class="links">
+
+<footer>
+  <strong>
   About Us
   Support
   Blog
@@ -25,7 +57,11 @@
   Jobs
   Privacy
   Terms
-
+</strong>
   &copy; 2014 Instagram
+
+</footer>
+</div>
+</section2>
 </body>
 </html>
