--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="blue-box">
+    <img class="logo-inst" src="./images/brand.png" alt="logo">
+  <title>Instagram</title>
+  <a class="log-in" href="#">Log in</a>
+  <img class="home" src="./images/home.png" alt="home">
+   </div>
 
-  Capture and Share the World's Moments
+  
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <img class="phone" src="./images/phones.png" alt="phonrinst">
+  <img class="white-box" src="./images/frame.png" alt="">
+ 
+  
+  <h1>Capture and Share</br>the World's Moments</h1>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <p>Instagram is a <span>fast</span>, <span>beautiful</span>  and <span>fun</span> way to share your life</br> with friends and Family</br>
+      </br>
+        Take a picture or video, choose a filter to transform its look</br> and feel, then post
+        to instagram -- It's that easy. You can</br>  even share to Facebook, Twitter, Tumblr and more.
+        It's a new</br>  way to see the world.</br></br>
+        Oh yeah, did we mention it's free?</p>
 
-  Oh yeah, did we mention it's free?
+        
+        <img class="app-store" src="./images/badge-iphone.png" alt="appStore">
 
-  Download on the App Store
-  Get it on Google Play
+        <img class="google-play" src="./images/badge-android.png" alt="googlePlay">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+   
+  <ul class="footer">
+    <a href="#"> About Us</a>
+    <a href="#">Support</a>
+    <a href="#">Blog</a>
+    <a href="#">Press</a>
+    <a href="#">API</a>
+    <a href="#">Jobs</a>
+    <a href="#">Privacy</a>
+    <a href="#">Terms</a>
+    <a class="arroba" href="#">&copy; 2014 Instagram</a>
+  </ul>
 
-  &copy; 2014 Instagram
-</body>
+
+
+ </body>
 </html>
