--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,78 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<header>
+  <div class="header">
+    <img src="images/bgtile.png" alt="">
+  </div>
+</header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<!-- <section class="login-button">
+  <img src="images/home.png">Log In
+</section> -->
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<div class="phones">
+  <img src="images/phones.png" alt="phones">
+</div>
 
-  Oh yeah, did we mention it's free?
+<section class="instagram-logo-login">
+  <img class="instagram-logo" src="images/brand.png" alt="instagram-logo">
 
-  Download on the App Store
-  Get it on Google Play
+  <div class="login-button"><img src="images/home.png">   <strong class="login-text">Log In</strong></div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+</section>
 
-  &copy; 2014 Instagram
+  <div class="container">
+
+    <h1>Capture and Share</h1>
+    <h1>the World's Moments</h1>
+    <br>
+    
+      <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life</p>
+      <p>with friends and family.</p>
+      <br>
+      <p>Take a picture or video, choose a filter to transform its look</p>
+      <p>and feel, then post to Instagram &mdash; it's that easy. You can</p>
+      <p>even share to Facebook, Twitter, Tumblr and more. It's a</p>
+      <p>new way to see the world.</p>
+      <br>
+      Oh yeah, did we mention it's free?</p>
+      <br>
+
+      <img src="images/badge-android.png" alt="android-img">
+      <img src="images/badge-iphone.png" alt="iphone-img">
+  
+  </div>
+
+  
 </body>
+
+
+<footer>
+  <div class="nav-bar">
+    <nav>
+      <ul>
+      <strong>
+        <li>ABOUT US</li>
+        <li>SUPPORT</li>
+        <li>BLOG</li>
+        <li>PRESS</li>
+        <li>API</li>
+        <li>JOBS</li>
+        <li>PRIVACY</li>
+        <li>TERMS</li>
+        <li><span class="copyright">&copy; 2014 INSTAGRAM</span></li>
+      </strong>
+      </ul>
+    </nav>
+  </div>
+</footer>
+
 </html>
