Day 2 Independent - Instagram copy

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,17 +2,58 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="top">
+  </div>
+  <div class="container">
+      <div class="picture">
+        <img src="images/phones.png" alt="phone">
+      </div>
+      <div class="main">
+        <img src="images/brand.png" alt="instagram logo">
+        <div class="logIn">
+          <img src="images/home.png" alt="home icon">
+          <span class="word"><b>Log In</b></span>
+          
+        </div>
+        <div class="main-content">
+          <!-- <img src="images/frame.png" alt="frame"> -->
+          <h1>Capture and Share <br>
+              the World's Moments</h1>
+          <p>
+              Instagram is a <b>fast</b>, <b>beautiful</b> 
+              and <b>way</b> to share your 
+              life <br>with friends and family. <br> <br>
+                Take a picture or video, choose a filter 
+                to transform its look and feel, then post 
+                to Instagram &mdash; it's that easy. 
+                You can even share to Facebook, Twitter, 
+                Tumblr and more. 
+                It's a new way to see the world.  
+          </p>
+          <p>
+            Oh yeah, did we mention it's free?
+          </p>
+        </div>
+        <div class="download-app">
+          <img src="images/badge-iphone.png" alt="download iphone app button">
+          <img src="images/badge-android.png" alt="download android app button">
+        </div>
 
-  Capture and Share the World's Moments
+      </div>
+  </div>
+  
+  <div>
+  <!-- Instagram
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  
 
-  Oh yeah, did we mention it's free?
+  
+
+  
 
   Download on the App Store
   Get it on Google Play
@@ -26,6 +67,8 @@
   Privacy
   Terms
 
-  &copy; 2014 Instagram
+  &copy; 2014 Instagram -->
+
+</div>
 </body>
 </html>
