--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
+ <head>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <title>Instagram</title>
+ </head>
+
 <body>
-  Instagram
+<div class="dark-background">
+  <img src="images/phones.png" alt="Iphone Photo" class="phones-image">
 
-  Capture and Share the World's Moments
+  <div class="container">
+    <img src="images/brand.png" alt="Instagram Logo">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div class="container-two">
+        <img src="images/home.png" alt="home">
+        <h3>Log in</h3>
+   
+      </div>
+  </div>
+  
+  <div class="text">
+    <h2>Capture and Share the World's Moments</h2>
+      <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+    <img src="images/badge-iphone.png" alt="Iphone Badge">
+    <img src="images/badge-android.png" alt="Android Badge">
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class= "footer">
+    <ul>
+      <li><a href="">About Us</a></li>
+      <li><a href="">Support</a></li>
+      <li><a href="">Blog</a></li>
+      <li><a href="">Press</a></li>
+      <li><a href="">API</a></li>
+      <li><a href="">Jobs</a></li>
+      <li><a href="">Privacy</a></li>
+      <li><a href="">Terms</a></li>
+      <li id="copyright">&copy; 2014 Instagram</li>
+    </ul>
+  </div>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+</div>
 </body>
 </html>
