--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Instagram</title>
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <section>
+    <div class="blue-top"></div>
+    <div class="container">
+      <img id="phones" src="images/phones.png" alt="Instagram on your phone">
+      <img id="brand" src="images/brand.png" alt="Instagram">
+      <button id="log-button" type="button">
+        <img id="casita" src="images/home.png" alt="home"> Log in</button>
+        <img class="frame" src="images/frame.png">
+      <div class="description">
+        
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a
+          <b>fast</b>,
+          <b>beautiful</b> and
+          <b>fun</b> way to share your life with friends and family.
+          <br>
+          <br> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
+          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <br>
+          <br> Oh yeah, did we mention it's free?
+        </p>
+        <div class="downloads">
+          <img id="iphone" src="images/badge-iphone.png" alt="Download on the App Store">
+          <img id="android" src="images/badge-android.png" alt="Get it on Google Play">
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <nav>
+      <ul>
+        <li>
+          <a href="#">About Us</a>
+        </li>
+        <li>
+          <a href="#">Support</a>
+        </li>
+        <li>
+          <a href="#">Blog</a>
+        </li>
+        <li>
+          <a href="#">Press</a>
+        </li>
+        <li>
+          <a href="#">API</a>
+        </li>
+        <li>
+          <a href="#">Jobs</a>
+        </li>
+        <li>
+          <a href="#">Privacy</a>
+        </li>
+        <li>
+          <a href="#">Terms</a>
+        </li>
+        <li id="copy" >&copy; 2014 Instagram</li>
+      </ul>
+    </nav>
+  </footer>
 </body>
+
 </html>
