--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel='stylesheet' href='./css/main.css'>
 </head>
+
 <body>
-  Instagram
+  <div class="background"></div>
+  <div class="container">
+    <section class="phones">
+      <img src='./images/phones.png' alt='cell phones'>
+    </section>
 
-  Capture and Share the World's Moments
+    <section class='main'>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <section class="branding">
+        <img src='./images/brand.png' alt='instagram'>
+        <a class="home-btn">
+          <img src='./images/home.png' alt='home'>
+          <span>Log in</span>
+        </a>
+      </section>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+      <section class='main-text'>
+        <header>
+          <h1>Capture and Share the World's Moments</h1>
+        </header>
+        <e>Instagram is a
+          <b>fast</b>,
+          <b>beautiful</b> and
+          <b>fun</b> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
+            easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p> Oh yeah, did we mention it's free?</p>
 
-  Download on the App Store
-  Get it on Google Play
+          <footer class="main-text-footer">
+            <img src='./images/badge-iphone.png' alt='iphone badge' class='footer-bdg'>
+            <img src='./images/badge-android.png' alt='android badge' class="footer-bdg">
+          </footer>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      </section>
+    </section>
+  </div>
 
-  &copy; 2014 Instagram
+  <footer class="page-footer">
+    <ul>
+      <li>
+        <a href='#'>About Us</a>
+      </li>
+      <li>
+        <a href='#'>Support</a>
+      </li>
+      <li>
+        <a href='#'>Blog</a>
+      </li>
+      <li>
+        <a href='#'>Press</a>
+      </li>
+      <li>
+        <a href='#'>API</a>
+      </li>
+      <li>
+        <a href='#'>Jobs</a>
+      </li>
+      <li>
+        <a href='#'>Privacy</a>
+      </li>
+      <li>
+        <a href='#'>Terms</a>
+      </li>
+      <li>
+        &copy; 2014 Instagram
+      </li>
+    </ul>
+  </footer>
 </body>
+
 </html>
