--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,55 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="background"></div>
 
-  Capture and Share the World's Moments
+  <div class="container">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <img class="phone" src="images/phones.png">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="float">
+      <div class="inta-container">
 
-  Oh yeah, did we mention it's free?
+        <div class="logo-login">
+          <img class="something" src="images/brand.png">
+          <button><img src="images/home.png">Log In</button>
+        </div>
+        <div class="clearfix"></div>
 
-  Download on the App Store
-  Get it on Google Play
+        <div class="main-info">
+          <h1>Capture and Share the World's Moments</h1>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  &copy; 2014 Instagram
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+    </div>
+    <img class="download" src="images/badge-iphone.png">
+
+    <img class="download" src="images/badge-android.png">
+    </div>
+  
+    <div class="clearfix"></div>
+
+
+    <footer>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+  </div>
 </body>
 </html>
