--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,22 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <div class="header"></div>
+  <div class="container">
+    <div class="left"></div>
+    <div class="phone-img">
+      <img src="/Users/DanielAutrey/Desktop/ironhack/Individual/lab-css-instagram-clone/starter-code/images/phones.png">
+    </div>
+ </div>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="right-article">
+      <img class="brand" src= "images/brand.png" width="50%"><button type=><img src="images/home.png"> Login</button>
+    <div class="text"> 
+      <h2>Capture and Share the World's Moments</h2>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.<br><br>
 
-  Oh yeah, did we mention it's free?
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
 
-  Download on the App Store
-  Get it on Google Play
+          Oh yeah, did we mention it's free?</p>
+    </div>
+    <img src="images/badge-iphone.png"> <img src="images/badge-android.png">
+  </div>
+ <div class="clear"></div> 
 
+
+
+  <footer>
+  <b>
   About Us
   Support
   Blog
@@ -25,7 +42,13 @@
   Jobs
   Privacy
   Terms
+  &copy; 2014 Instagram</b>
+  </ul>
+  </footer>
 
-  &copy; 2014 Instagram
+
+
+  
+ </div>
 </body>
 </html>
