instagram first try

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,11 +2,25 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+<div id="enchilada">
+  <section class="steel-blue">
+    <img src="/Users/martingenet/Desktop/Ironhack/soloprogramming/lab-css-instagram-clone/starter-code/images/brand.png"
+    alt="picture baby" class="instagramPic"> 
+    <button id="home-button"><img src="/Users/martingenet/Desktop/Ironhack/soloprogramming/lab-css-instagram-clone/starter-code/images/home.png" 
+    alt="another freaking picture"><h5>Log in</h5>
+    </button>
+  </section>
+  <div>
+    <img id="phone-pic" src="/Users/martingenet/Desktop/Ironhack/soloprogramming/lab-css-instagram-clone/starter-code/images/phones.png" 
+    alt="link" />
+  </div>
+  
 
-  Capture and Share the World's Moments
+  <div class="body-class">
+  <h2>Capture and Share the World's Moments</h2>
 
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
@@ -14,18 +28,27 @@
 
   Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+  </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+
+
+
+  
+ 
+
+  <footer>
+    About Us
+    Support
+    Blog
+    Press
+    API
+    Jobs
+    Privacy
+    Terms
+
+    &copy; 2014 Instagram
+  </footer>
+</div>
 </body>
 </html>
