background frame changes

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,60 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="container">
+    <img class="heading-img" src="images/bgtile.png" alt="tile">
+      <div class="instagram-main">
+          <img src="images/brand.png" alt="instagram-logo">
+       <button class="home"><img class="house" src="images/home.png" alt="home">Login</button>   
+      </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="phone-image">
+    <img src="images/phones.png" alt="phones">
+  </div>
+  
+ <div class="insta-information">
+   <div class="wrapper">
+     <h1>Capture and Share the World's Moments</h1> 
 
-  Oh yeah, did we mention it's free?
+    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>  
+    
+ <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p> 
+    
+  <p>Oh yeah, did we mention it's free?</p>    
 
-  Download on the App Store
-  Get it on Google Play
+  <img src="images/badge-iphone.png" alt="iphone">
+  <img src="images/badge-android.png" alt="play-store">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+ 
+  
 
-  &copy; 2014 Instagram
+   </div>
+
+   
+   
+ </div>
+
+ 
+</div>
+
+<footer>
+    About Us
+    Support
+    Blog
+    Press
+    API
+    Jobs
+    Privacy
+    Terms
+  
+    &copy; 2014 Instagram
+  </footer>
+
+
 </body>
 </html>
