--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,61 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet"  href="css/main.css">
 </head>
 <body>
-  Instagram
+  <main>
+    <div class="blue-header">
+      <figure>
+        <img class="img-logo" src="images/brand.png" alt="Instagram Logo"/>
+      </figure>
 
-  Capture and Share the World's Moments
+           <div class="login">
+                  <img src="images/home.png" alt="Home icon"/>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+                 <p>Log in</p>
+                        
+                </div>
+      </div>
+      <!-- End of Blue Box container -->
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div>
+       <img  class="phone-img" src="images/phones.png" alt="Iphone img"/>
 
-  Oh yeah, did we mention it's free?
+       <div class="white-box-content">
+  <h1 class="main-heading">Capture and Share<br /> the World's Moments</h1>
+  <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+  <p>Take a picture or video, choose a filter to transform its look and feel, 
+  then post to Instagram &mdash; it's that easy. 
+  You can even share to Facebook, Twitter, Tumblr and more. 
+  It's a new way to see the world.</p>
+  <p>Oh yeah, did we mention it's free?</p>
 
-  Download on the App Store
-  Get it on Google Play
+  <div class="badge-img">
+    <img src="images/badge-iphone.png" alt=""/>
+  </div>
+  <div  class="badge-img">
+    <img src="images/badge-android.png" alt=""/>
+  </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      </div><!-- End Of White Box Content-->
+  </div><!-- End Of Main White Box -->
 
-  &copy; 2014 Instagram
+
+  <footer>
+    <ul class="footer-nav">
+       
+      <li><a href="#">About us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li><a href="#"><span>&copy; 2014 Instagram</span></a></li>
+    </ul>
+  </footer>
+  </main>
 </body>
 </html>
