--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,17 +2,29 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="blueBackground"></div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="phones"></div>
+  <img src="images/phones.png">
+</div>
+ 
+  <div class="rightBlock">
+  <img src="images/brand.png">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="rightText">
+  
+  <h1>Capture and Share the World's Moments</h1>
 
-  Oh yeah, did we mention it's free?
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+  <p>Oh yeah, did we mention it's free?</p></div>
+  </div>
 
   Download on the App Store
   Get it on Google Play
