--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+   <head>
+      <title>Instagram</title>
+      <link rel="stylesheet" href="css/main.css">
+   </head>
+   <body>
+      <div class="backgroundBlue"></div>
+      <div class="backgroundWhite"></div>
+      <div class="phoneImg">
+         <img src="images/phones.png" alt="Phones" width:"200px" height="500px">
+      </div>
+      <div class="titleInstagram">
+         <img src="images/brand.png" alt="Phones" width:"700px" height="80px">
+      </div>
+      <div class="imgLogin">
+         <button type="submit"><img class="homeImg" src="images/home.png" alt="Home">Log in<img src="images/home" alt=""></button>
+      </div>
+      <div class="text">
+          <h1> Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
+          <p>Instagram is a fast, beautiful and fun way to share your life<br> with friends and family.</p>
+           <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p> 
+           <p>Oh yeah, did we mention it's free?</p>
+           <img class="appleImg" src="images/badge-iphone.png" alt="App store">
+           <img class="appleImg" src="images/badge-android.png" alt="App store">
+      </div>
+      <div class="footer">
+          <a href="#">About Us</a>
+          <a href="#">Support</a>
+          <a href="#">Blog</a>
+          <a href="#">Press</a>
+          <a href="#">API</a>
+          <a href="#">Privacy</a>
+          <a href="#">Terms</a>
+          &copy; 2014 Instagram
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+      </div>       
+   </body>
 </html>
