--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,68 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="/home/frieda/Documentos/ironhack/week1/day2/lab-css-instagram-clone/starter-code/css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <button>
+      <img src="/home/frieda/Documentos/ironhack/week1/day2/lab-css-instagram-clone/starter-code/images/home.png">
+      Log in
+  </button>
+  <div class="boton"> </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="login">
+    
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="fondoazul">
+</div>
 
-  Oh yeah, did we mention it's free?
+<div class="imageninstagram">
+<img src="/home/frieda/Documentos/ironhack/week1/day2/lab-css-instagram-clone/starter-code/images/brand.png">
+</div>
 
-  Download on the App Store
-  Get it on Google Play
+<div class="telefonos">
+  <img src="/home/frieda/Documentos/ironhack/week1/day2/lab-css-instagram-clone/starter-code/images/phones.png">
+</div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <section class="section1">
+<h1>Capture and Share <br> the World's Moments</h1>
+
+<div class= "fondoblanco">
+  <img src="/home/frieda/Documentos/ironhack/week1/day2/lab-css-instagram-clone/starter-code/images/frame.png">
+</div>
+
+<div class="parrafos">
+  <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life <br> with friends and family.
+
+  <p>Take a picture or video, choose a filter to transform its look <br> and feel, then post to Instagram &mdash; it's that easy. You can <br> even share to Facebook, Twitter, Tumblr and more. It's a <br> new way to see the world.</p>
+
+  <p>Oh yeah, did we mention it's free?</p>
+  </div>
+
+  </section>
+
+<div class="imagen1">
+  <img src="/home/frieda/Documentos/ironhack/week1/day2/lab-css-instagram-clone/starter-code/images/badge-android.png">
+</div>
+
+<div class="imagen2">
+<img src="/home/frieda/Documentos/ironhack/week1/day2/lab-css-instagram-clone/starter-code/images/badge-iphone.png">
+</div>"
+  
+<section class="footer">
+  <a href="About Us">About us</a>
+  <a href="Support">Support</a>
+  <a href="Blog">Blog</a>
+  <a href="Press">Press</a>
+  <a href="API">API</a>
+  <a href="Jobs">Jobs</A>
+  <a href="Privacy">Privacy</a>
+  <a href="Terms">Terms</a>
 
   &copy; 2014 Instagram
+  </section>
 </body>
 </html>
