--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
-</head>
+</head>  
 <body>
-  Instagram
+  <div class="background"></div>
+  <img id="phones" class="phones" src="../starter-code/images/phones.png"> 
+  <img id="brand" class="brand" src="images/brand.png">
+  
+  <div class="para white-back"><h2>Capture and Share the World's Moments</h2>
 
-  Capture and Share the World's Moments
+    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <p>Oh yeah, did we mention it's free?</p>
 
-  Oh yeah, did we mention it's free?
+    <p>Download on the App Store</p>
+    <p>Get it on Google Play</p>
+  <img id="badge-iphone" class="iphone" src="../starter-code/images/badge-iphone.png">
+  <img id = "badge-android" class="android" src="../starter-code/images/badge-android.png">
+</div>
+<div class="login-btn">
+    <img id ="log-in" src="../starter-code/images/home.png">
+    <span>Log in</span>
+</div>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+<footer>
+<div>
+  <ul>
+    <li><a href="#">About Us</a></li>
+    <li><a href="#">Support</a></li>
+    <li><a href="#">Blog</a></li>
+    <li><a href="#">Press</a></li>
+    <li><a href="#">API</a></li>
+    <li><a href="#">Jobs</a></li>
+    <li><a href="#">Privacy</a></li>
+    <li><a href="#">Terms</a></li>
+    <li>&copy; 2014 Instagram</li>
+  </ul></div>
+</footer>
+</body> 
 </html>
